--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,12 @@ setuptools==47.1.0
 pytest==7.1.1
 seaborn==0.11.2
 opencv-python==4.5.5.64
+black
 
 pydantic
+python-multipart
+scikit-image
+fastapi
+uvicorn["standard"]
 evidently
-black
 build
