--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,14 @@ __pycache__/
 *.so
 
 # Comma Separated Value files (.csv)
-*.csv
+#*.csv
 
 # Models (.h5)
 *.h5
-models/*.txt
+#models/*.txt
 
 # Images (.png)
-*.png
+#*.png
 
 # Folders
 Others/
